<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detailImg"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            tools:src="@drawable/book1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailWriter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:textSize="16sp"
                tools:text="Writer"/>

                <TextView
                        android:id="@+id/detailTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        tools:text="Book Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/book_description"/>

                <TextView
                    android:id="@+id/detailDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:textSize="16sp"
                    tools:text="Description"/>

                    <TextView
                        android:id="@+id/detailDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/detail"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        tools:textSize="14sp"
                        android:text="@string/pages"/>

                <TextView
                    android:id="@+id/detailPages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:textSize="14sp"
                    tools:text="Pages"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:textSize="14sp"
                    android:text="@string/publisher"/>

                <TextView
                    android:id="@+id/detailPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:textSize="14sp"
                    tools:text="Publisher"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        tools:textSize="14sp"
                        android:text="@string/isbn"/>

                <TextView
                    android:id="@+id/detailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:textSize="14sp"
                    tools:text="ISBN"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>